--- a/Pertemuan 3/Part 4 Struktur Fungsi.ipynb
+++ b/Pertemuan 3/Part 4 Struktur Fungsi.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "70a17f48",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "78fd2f97",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ded0f342",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "7"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "e7cfdf08",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "0b308b24",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "144"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "d0f57f36",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "62274ee8",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "e89bf46f",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "3fbbb3bd",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "bf76c076",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "'Nilai tidak ada'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "dd3c8302",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "'Nilai tidak ada'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "2f35fd59",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "3e89dc1c",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "9d191dcd",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "c872e1d6",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "9300863a",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "19ce2d73",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "8f7543ef",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "1470729a",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "id": "4aaf55a2",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "f927a244",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "2acb7a40",
    "metadata": {
     "scrolled": true
@@ -649,8 +649,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "c8e6c857",
+   "execution_count": 27,
+   "id": "74d80244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {\n",
+    "    'cat': 'kucing',\n",
+    "    'dog': 'anjing',\n",
+    "    'fish': 'ikan'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4be6e8e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kucing'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3877c719",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'anjing'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['dog']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d42ccc0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ikan'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['fish']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ae4f4f9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['bird']= 'burung'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0a3b23ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 'kucing', 'dog': 'anjing', 'fish': 'ikan', 'bird': 'burung'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e4c8f93d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['elephant']= 'gajah'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "27dab029",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +781,7 @@
        " 'elephant': 'gajah'}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,8 +792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "eda32fb8",
+   "execution_count": 35,
+   "id": "e06817ce",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +802,7 @@
        "dict_keys(['cat', 'dog', 'fish', 'bird', 'elephant'])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +813,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
+   "id": "8214b48b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['kucing', 'anjing', 'ikan', 'burung', 'gajah'])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "3bff36fc",
    "metadata": {},
    "outputs": [
@@ -718,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "id": "9e995c34",
    "metadata": {},
    "outputs": [
@@ -740,39 +879,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "e412ecdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = []\n",
-    "for i in range(5):\n",
-    "    a.append(i**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "b0404a38",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 4, 9, 16]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cf0e1e24",
    "metadata": {},
@@ -782,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "id": "c0f9f3e3",
    "metadata": {},
    "outputs": [],
@@ -792,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 42,
    "id": "9b5a02d8",
    "metadata": {},
    "outputs": [
@@ -802,7 +908,7 @@
        "[0, 1, 4, 9, 16]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "id": "0b0a90d0",
    "metadata": {},
    "outputs": [],
@@ -823,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "id": "9e7cb125",
    "metadata": {},
    "outputs": [
@@ -833,7 +939,7 @@
        "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 45,
    "id": "2af3a33c",
    "metadata": {},
    "outputs": [],
@@ -854,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 46,
    "id": "ecdd22fa",
    "metadata": {},
    "outputs": [
@@ -871,7 +977,7 @@
        " 'Nilai tidak ada']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
